# ChangeLog for dev-python/termstyle
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2010; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Added PYTHON_DEPEND setting.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Keyworded x86.

  28 Oct 2009; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Keyworded amd64.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Switch to using jnrowe-pypi eclass.

  30 Sep 2009; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
  Keyworded ~x86.

*termstyle-0.1.5 (29 Sep 2009)

  29 Sep 2009; James Rowe <jnrowe@gmail.com> +termstyle-0.1.5.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
