@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST termstyle-0.1.5.tar.gz 3590 RMD160 6a4a29169a4e59dd0f071cfb2f4c58b53c7e77fe SHA1 1570cb71bbfecbd7e840d7a4b76adfdb6c7a7533 SHA256 45cbc55948ebf307ce5a91347793348d03ae148ddfc48ef21c0c4771fdffbe36
-EBUILD termstyle-0.1.5.ebuild 344 RMD160 ed2f52eca78bef44a12ecf7274a67c9124976923 SHA1 2578d383fce170431fff78d5e34896d29f4e6a9c SHA256 7d534d0fa356a81c76d2d1b02f68760a4271bb44ee965933028ccc54ff5de329
-MISC ChangeLog 831 RMD160 4eac5dadf748f7ea1f3215244c8f3c3fb47520e3 SHA1 2053e9e795ac5f5130e9c8fbf0d18b6627176839 SHA256 defdd9f70457b37c999a668bb87fe85d85b528ed8fdc292ac2a6fcbca7faca33
+EBUILD termstyle-0.1.5.ebuild 396 RMD160 bb576b229275cd0a7249252fa6b1e874f11ca93f SHA1 a04869316562ed3a55b9b9606bec0507ee827ebb SHA256 1acbbd13c85de44484c7615300875ed06cf530e09b617b6c57c41255725075ec
+MISC ChangeLog 943 RMD160 4280f1c2a1fdb6c6d72fb20245ec7d42c4b441c6 SHA1 5eb4c24aeb6e8223f68c8edb17f0c1cdb3d102c6 SHA256 14263dae59e0a78aedf275ac341dc7a14b1d2069ca8178a0bf2b6dcdf1baa415
 MISC metadata.xml 666 RMD160 e91d1a2a9cb5550b0ef12fc90275042e2282392e SHA1 180e92c06be6f18a0b4543a7f163a7aadd9d79d0 SHA256 4e18bc68342e104788b8307446b959c912adfd576e9aaf54447a1068362ed972
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkulokkACgkQzJrj3cAXR0nQOgCfSi3hnU1Zb/YjTCDQeCPx3zxQ
-DsIAoJ0BVrIFx5azzfzb5f20OqkSgJL+
-=03e5
+iEYEARECAAYFAkw0blcACgkQzJrj3cAXR0lEuwCgoqpb6nW1SemwVT7QC6Nj2KmU
+wiEAniDXCIvyxwyj9ajg/K2A1V/xcM//
+=Djjp
 -----END PGP SIGNATURE-----
