@@ -1,5 +1,5 @@
->=app-admin/eselect-python-20091230 dev-lang/python
->=app-admin/eselect-python-20091230 dev-lang/python
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
 0
 http://pypi.python.org/packages/source/t/termstyle/termstyle-0.1.5.tar.gz
 
