@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2010; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
+  Enable multi-ABI support for Python v2.
+
   21 Mar 2010; James Rowe <jnrowe@gmail.com> termstyle-0.1.5.ebuild:
   Added PYTHON_DEPEND setting.
 
